--- a/breaker_switches.html
+++ b/breaker_switches.html
@@ -12,46 +12,104 @@
     <div id="mainDiv" class="mainDiv">
       <!-- Sub div holds titles and headers-->
       <div class="subDiv1">
-        <h1 class="titles">Power Trip</h1>
-        <h2 class="titles">Power Analytics</h2>
+        <div id="titleContainer1">
+          <h1 class="titles">Power Trip</h1>
+        </div>
+        <div id="titleContainer2">
+          <h2 class="titles">Power Analytics</h2>
+        </div>
       </div>
 
       <!-- Sub div holds button and switch elements-->
       <div class="subDiv2" id="buttonsDiv">
+        <!-- Left column of UI Corresponding to circuit rooms-->
         <div id="leftDiv">
-          <h3>Circuit</h3>
-          <div class="rooms">living room</div>
-          <div class="rooms">Guest bedroom</div>
-          <div class="rooms">Master bedroom</div>
+          <div class="circuitTitleHeaders">Circuit</div>
+          <div class="rooms">Living Room</div>
+          <div class="rooms">Guest Redroom</div>
+          <div class="rooms">Master Bedroom</div>
         </div>
+        <!-- Middle column of UI Corresponding to power dissaption-->
         <div id="midDiv">
-          <h3>Usage</h3>
+          <div class="circuitTitleHeaders">Usage</div>
           <div class="usages">1kw</div>
           <div class="usages">20kw</div>
           <div class="usages">5kw</div>
         </div>
+        <!-- Right column of UI Corresponding to circuit switches-->
         <div id="rightDiv">
-          <h3>Status</h3>
-          <div class="status" id="circuitLiving">on</div>
-          <div class="status" id="circuitGuestBed">off</div>
-          <div class="status" id="circuitMasterBed">on</div>
+          <div class="circuitTitleHeaders">Status</div>
+          <div class="status" id="circuitLiving">OFF</div>
+          <div class="status" id="circuitGuestBed">OFF</div>
+          <div class="status" id="circuitMasterBed">OFF</div>
         </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
+
+      //// Client Side Code for Breaker Switch toggling ////
+
+
+      // instantiate client socket
       var socket = io();
-      // $(document).ready(function(){
-      //   $(".status").click(function(){
-      //   $(this).hide();
-      //   console.log("div was hidden");
-      //   });
-      // });
+
+      // Add event listeners to HTML buttons
       var livingRoomStatus = document.getElementById("circuitLiving");
+      var guestBedroomStatus = document.getElementById("circuitGuestBed");
+      var mastBedroomStatus = document.getElementById("circuitMasterBed");
+
+      const livingRoomAlert = "Living Room Circuit Toggled";
+      const guestRoomAlert  = "Guest Bedroom Circuit Toggled";
+      const masterRoomAlert = "Master Bedroom Circuit Toggled";
+
+      /*
+      / Socket retreives status of circuits
+      */
+      socket.on("CircuitStatus", function(circuitStatus) {
+        var status = JSON.parse(circuitStatus);
+
+        // change HTML element color and text based on circuit status
+        if (status.livingRoom === "off") {
+          livingRoomStatus.style.backgroundColor= "red";
+          livingRoomStatus.textContent = "OFF";
+        } else {
+          livingRoomStatus.style.backgroundColor= "yellowgreen";
+          livingRoomStatus.textContent = "ON";
+        }
+        if (status.guestRoom === "off") {
+          guestBedroomStatus.style.backgroundColor= "red";
+          guestBedroomStatus.textContent = "OFF";
+        } else {
+          guestBedroomStatus.style.backgroundColor= "yellowgreen";
+          guestBedroomStatus.textContent = "ON";
+        }
+        if (status.masterRoom === "off") {
+          mastBedroomStatus.style.backgroundColor= "red";
+          mastBedroomStatus.textContent = "OFF";
+        } else {
+          mastBedroomStatus.style.backgroundColor= "yellowgreen";
+          mastBedroomStatus.textContent = "ON";
+        }
+      });
+
+      /*
+      / Emit events if either buttons are clicked
+      */
       livingRoomStatus.addEventListener("click", function() {
         console.log("Living Room Circuit toggled");
-        socket.emit("Living Room Click", "Living Room Circuit Toggled")
+        socket.emit("Living Room Click", livingRoomAlert)
+      });
+
+      guestBedroomStatus.addEventListener("click", function() {
+        console.log("Guest Bedroom Circuit toggled");
+        socket.emit("Guest Room Click", guestRoomAlert)
+      });
+
+      mastBedroomStatus.addEventListener("click", function() {
+        console.log("Master Bedroom Circuit toggled");
+        socket.emit("Master Room Click", masterRoomAlert)
       });
 
     </script>
